# ProjectEuler

./: Cargo.toml
fibonacci/src/: fibonacci_helper.rs  lib.rs
primes/src/: lib.rs  primes_helper.rs
src/: main.rs  metadata.json  metadata_parser.rs  state.rs  tui.rs
src/handler/: arguments_handler.rs  inputs_handler.rs  mod.rs  user_input.rs
src/parser/: arguments_parser.rs  arguments_parser_data.rs  mod.rs  parser_data.rs
src/runner/: mod.rs  solution_runner.rs
src/solutions/: mod.rs  s001.rs  s002.rs  s003.rs  s004.rs  solution.rs
src/utilities/: defines.rs  mod.rs  s001.rs
