[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
fibonacci = { path = "fibonacci" }
primes = { path = "primes" }
once_cell = "1.20.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
